# chbuild-poc

./: .clang-format  .gitignore  CMakeLists.txt  Config.cmake  Makefile  chbuild  chpm  config.cmake
defconfigs/: raspi3.config
kernel/: CMakeLists.txt  Config.cmake  config.cmake
kernel/virt/: CMakeLists.txt  virt.c
ports/: musl_common.sh
ports/hello-chpm/: build.sh  hello_chpm.c  recipe.json
ports/hello-chpm++/: build.sh  hello_chpm.cpp  recipe.json
ports/libffi/: build.sh  install.sh  recipe.json
ports/libgcc/: recipe.json
ports/libstdc++/: recipe.json
ports/python3/: build.sh  install.sh  pyconfig.chcore.h  recipe.json
ports/python3/pylibs/crossenv/: README.md
ports/ros2/: build.sh  recipe.json
ports/ros2/scripts/: README.txt  autogen.py  deps-build.sh  make-ros.sh  source-list
ports/sqlite3/: Makefile  build.sh  install.sh  recipe.json  test.c
ports/test/: build.sh  recipe.json
ports/zlib/: build.sh  recipe.json
scripts/: entry.sh
scripts/cmake/: CheckConfig.cmake  LoadConfig.cmake  LoadConfigDefault.cmake
scripts/cmake/Helpers/: input.sh
scripts/cmake/Modules/: ChCoreTools.cmake
scripts/cmake/Toolchains/: kernel.cmake
